--- a/index.html
+++ b/index.html
@@ -3,115 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./styles/initial.css">
 	<title>download | a song</title>
 
-	<style>
-		*{
-			box-sizing: border-box;
-			padding: 0; margin: 0;
-		}
-
-		article{
-			margin-bottom: 10rem;
-		}
-
-		header{
-			background-color: #333; height: 20vh;
-			overflow: hidden; display: flex; flex-flow: row nowrap;
-			justify-content: space-between;
-			border-bottom: 4px solid gray; padding: 1rem .8rem;
-			position: fixed; top: 0; width: 100%;
-		}
-		header>div{
-			margin: auto;
-		}
-
-		h1{
-			text-transform: uppercase;
-			font-weight: 600;
-			font-family: Vector, Texturina, sans-serif;
-			margin: 12rem 1rem 2rem 1rem; text-align: center;
-		}
-
-		p{
-			font: 1.1rem/1.6 Roborto, sans-serif;
-		}
-		audio{
-			width: 92%; margin: auto;;
-		}
-
-		img{
-			width: 64%; fill: white;
-		}
-		svg{fill: white;}
-
-		.song{
-			margin: 2rem 1rem 2rem;
-		}
-
-		.play a{
-			display: inline-block;
-			text-decoration: none;
-			color: #fff;
-			padding: .4rem 1rem;
-			background: black;
-		}
-
-		.song{
-			max-height: 400px; width: 45%;
-			background-color: #eee; padding: 1rem;
-			border-radius: 8px; border-radius: 22px;
-			 margin-bottom: 8rem;
-		}
-
-		.links{
-			width: 64%; margin: auto;
-
-		}
-
-		footer{
-			background-color: #333; height: 20vh;
-			overflow: hidden; display: flex; flex-flow: row nowrap;
-			justify-content: space-between;
-			border-top: 4px solid gray; padding: 1rem .8rem; position: fixed; bottom: 0;
-		}
-
-		@media screen and (max-width: 300px){
-			h1, .song, p{
-				width: 85%; margin: auto; text-align: center;
-				margin-bottom: : .2rem;
-			}
-
-			h1{
-				font-size: 1.4rem; margin-bottom: 2rem;
-				margin-top: 8rem;
-			}
-
-			p{
-				margin-bottom: 1rem;
-			}
-
-			small{
-				font: .8rem/1.2 'Comic Sans MS', arial, sans-serif;
-				color: indianred;
-			}
-
-			footer{
-				flex-flow: column nowrap;
-				/*position: fixed;*/
-				align-items: center;
-				text-align: center;
-			}
-
-			footer a{
-				color: white; text-decoration: none;
-				display: inline-block;
-				padding: .4rem 0;
-			}
-		}
-
-
-	</style>
 </head>
 <body>
 	<header>
@@ -129,20 +23,20 @@
 	<article>
 		<p>Vibes by Kimbo boy. He sings about people and lovers in their honey moon or fights.
 		It would do you less harm if your to try downloading the song below.</p>
-
-		<div class="song">
-			<p>
-				<span>Am not shit - KIMBO boy</span> Legit media
-			</p>
-			<div class="play">
-				<audio src="./unconditional.mp3" controls>unconditional by dj shiru and Kelcy</audio>
-				<div class="links">
-					<a href="./unconditional.mp3" download>download</a>
-					<a href="">share</a>
-				</div>
-			</div>
-		</div>
 	</article>
+
+	
+	<div class="song">
+		<div>
+			<span>Song</span><span>Nze Kabaka</span>
+		</div>
+		<div>
+			<span>Artist</span><span>Sweet Nyc</span>
+		</div>
+		<a href="">Ragga</a>
+		<audio src="./media/audio/NZE KABAKA  SWEET NYCE.mp3"></audio>
+		<div><button><a href="./media/audio/NZE KABAKA  SWEET NYCE.mp3" download="Nze Kabaka by Sweet Nyc [legit media]">download <span></span></a></button><button>share</button></div>
+	</div>
 
 	<footer>
 		<a href="https://masalex8.wordpress.com" title="masalex8 website">visit masalex8</a>
