Some new edits, some files were completely deleted, just trying to minimise the design and make it more accessible yet powerful

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<meta name="description" content="Majoring in intertainment content like audio, video, Images, news and alike. for the manor works, we provide how to content and some dev lessons. check uu out for more details">
+
+	<meta name="author" content="Masalex8 Tom">
+
+ <!-- THE STYLE SHEETS -->
+	<link rel="icon" type="png" href="./media/images/legitMediaLight.png">
+	<link rel="stylesheet" href="./styles/phones.css" media="screen and (max-width: 600px)">
 	<link rel="stylesheet" href="./styles/initial.css">
 	<title>download | a song</title>
 
@@ -10,33 +18,193 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="https://masalex8.wordpress.com"><img src="./smile.svg" alt="masalex8 logo"></a>
+			<a href="https://masalex8.wordpress.com"><img src="./media/images/legitMedia.png" alt="legit media logo"></a>
 		</div>
 		<div class="menu">
-			<a href=""><img src="./github.svg" alt="a menu icon from icon fonts"></a>
+			<a href=""><img src="./media/images/github.png" alt="a menu icon from icon fonts"></a>
 		</div>
-		
-
 	</header>
-	<h1>click download below to download</h1>
 
-	<article>
-		<p>Vibes by Kimbo boy. He sings about people and lovers in their honey moon or fights.
-		It would do you less harm if your to try downloading the song below.</p>
-	</article>
+	<main>
+		<section class="hero">
+			<h3>LEGIT MEDIA</h3>
+			<p>Music, Video, Creative Images, Entertainment news and articles, and More to be added. We specialize in the things that are to put a smile on your face</p>
 
-	
-	<div class="song">
-		<div>
-			<span>Song</span><span>Nze Kabaka</span>
-		</div>
-		<div>
-			<span>Artist</span><span>Sweet Nyc</span>
-		</div>
-		<a href="">Ragga</a>
-		<audio src="./media/audio/NZE KABAKA  SWEET NYCE.mp3"></audio>
-		<div><button><a href="./media/audio/NZE KABAKA  SWEET NYCE.mp3" download="Nze Kabaka by Sweet Nyc [legit media]">download <span></span></a></button><button>share</button></div>
-	</div>
+			<button class="btn2">Upload Music</button><button class="btn2">Join US</button>
+
+			<div>
+				<div><img src="" alt="call us icon"><span></span></div>
+				<div><img src="" alt="whatsapp icon"><span></span></div>
+			</div>
+		</section>
+
+		<section >
+			<h2>Latest audio</h2>
+			<small>These are a week or less here on the website</small>
+
+			<div class="files">
+
+
+				<div class="file audio">
+					<p><span>Baby wange</span> - <span>Mike reins</span></p>
+					<div>
+						<small>3:23</small>
+						<span>23 downloads</span>
+						<span>23 plays</span>
+					</div>
+					<audio src="./media/audio/baby wange - mike reins.mp3" controls></audio>
+					<div>
+						<button>
+							<span><!--img--></span><a href="./media/audio/baby wange - mike reins.mp3" download>Download</a>
+						</button>
+						<button>
+							<span><!--img--></span><span>Share</span>
+						</button>
+					</div>
+
+				</div>
+
+				<div class="file audio">
+					<p><span>Chiki dance</span> - <span>Legit media all stars</span></p>
+					<div>
+						<small>3:19</small>
+						<span>23 downloads</span>
+						<span>23 plays</span>
+					</div>
+					<audio src="./media/audio/Chiki dance - Legit media all stars.mp3" controls></audio>
+					<div>
+						<button>
+							<span><!--img--></span><a href="./media/audio/baby wange - mike reins.mp3" download>Download</a>
+						</button>
+						<button>
+							<span><!--img--></span><span>Share</span>
+						</button>
+					</div>
+
+				</div>
+
+				<div class="file audio">
+					<p><span>Fafagula</span> - <span>O2 feat Royal Ivan</span></p>
+					<div>
+						<small>3:34</small>
+						<span>23 downloads</span>
+						<span>23 plays</span>
+					</div>
+					<audio src="./media/audio/Fafagula - O2 feat Royal Ivan.mp3" controls></audio>
+					<div>
+						<button>
+							<span><!--img--></span><a href="./media/audio/baby wange - mike reins.mp3" download>Download</a>
+						</button>
+						<button>
+							<span><!--img--></span><span>Share</span>
+						</button>
+					</div>
+
+				</div>
+
+				<div class="file audio">
+					<p><span>Lord i know</span> - <span>oxy gen feat delta fika</span></p>
+					<div>
+						<small>3:41</small>
+						<span>23 downloads</span>
+						<span>23 plays</span>
+					</div>
+					<audio src="./media/audio/Lord i know - oxy gen feat delta fika.mp3" controls></audio>
+					<div>
+						<button>
+							<span><!--img--></span><a href="./media/audio/baby wange - mike reins.mp3" download>Download</a>
+						</button>
+						<button>
+							<span><!--img--></span><span>Share</span>
+						</button>
+					</div>
+
+				</div>
+
+				<div class="file audio">
+					<p><span>zig zag</span> - <span>oxy gen feat delta fika</span></p>
+					<div>
+						<small>3:28</small>
+						<span>23 downloads</span>
+						<span>23 plays</span>
+					</div>
+					<audio src="./media/audio/zig zag - oxy gen feat delta fika.mp3" controls></audio>
+					<div>
+						<button>
+							<span><!--img--></span><a href="./media/audio/baby wange - mike reins.mp3" download>Download</a>
+						</button>
+						<button>
+							<span><!--img--></span><span>Share</span>
+						</button>
+					</div>
+
+				</div>
+
+				<div class="file audio">
+					<p><span>Nze kabaka</span> - <span>sweet nyc</span></p>
+					<div>
+						<small>3:09</small>
+						<span>23 downloads</span>
+						<span>23 plays</span>
+					</div>
+					<audio src="./media/audio/Nze kabaka - sweet nyc.mp3" controls></audio>
+					<div>
+						<button>
+							<span><!--img--></span><a href="./media/audio/baby wange - mike reins.mp3" download>Download</a>
+						</button>
+						<button>
+							<span><!--img--></span><span>Share</span>
+						</button>
+					</div>
+
+				</div>
+
+
+			</div>
+		</section>
+
+		<section>
+			<hr>
+			<p>
+				To be a little different from the other websites, Affiliated artists to LEGIT media are free to create or Update their profiles, Upload music and files, advertise themselve (small fee), share event, their pricing, the list keeps going. <br>
+				<button class="btn2">Know More</button>
+			</p>
+
+			<h2>Artists</h2>
+			<div class="artist">
+				<div class="file">
+					<figure><img src="./media/images/" alt=""></figure>
+					<p>Oxy Gen</p>
+					<span>genre</span> Ragga Music
+					<span>Audios</span> 24 mp3, 3 ogg
+					<button><a href="tel:+256777586094">Contact Me</a></button><button class="btn2"><a href="./pages/artist/template.html">About Me</a></button>
+				</div>
+				<div class="file">
+					<figure><img src="./media/images/" alt=""></figure>
+					<p>Oxy Gen</p>
+					<span>genre</span> Ragga Music
+					<span>Audios</span> 24 mp3, 3 ogg
+					<button><a href="tel:+256777586094">Contact Me</a></button><button class="btn2"><a href="./pages/artist/template.html">About Me</a></button>
+				</div>
+				<div class="file">
+					<figure><img src="./media/images/" alt=""></figure>
+					<p>Oxy Gen</p>
+					<span>genre</span> Ragga Music
+					<span>Audios</span> 24 mp3, 3 ogg
+					<button><a href="tel:+256777586094">Contact Me</a></button><button class="btn2"><a href="./pages/artist/template.html">About Me</a></button>
+				</div>
+				<div class="file">
+					<figure><img src="./media/images/" alt=""></figure>
+					<p>Oxy Gen</p>
+					<span>genre</span> Ragga Music
+					<span>Audios</span> 24 mp3, 3 ogg
+					<button><a href="tel:+256777586094">Contact Me</a></button><button class="btn2"><a href="./pages/artist/template.html">About Me</a></button>
+				</div>
+			</div>
+		</section>
+
+
+	</main>
 
 	<footer>
 		<a href="https://masalex8.wordpress.com" title="masalex8 website">visit masalex8</a>
