more adjustments added, more comming

--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="https://masalex8.wordpress.com"><img src="./media/images/legitMedia.png" alt="legit media logo"></a>
+			<a href="https://masalex8.wordpress.com"><img src="./../media/images/legitMedia.png" alt="legit media logo"></a>
 			<small style="display: block;">LEGIT MEDIA</small>
 		</div>
 		<nav class="menu">
-			<div class="dropdown humb" id="dropdown"></div>
+			<div class="dropdown humb" id="dropdown">
+        <span></span>
+      </div>
 			<ul id="elems">
-				<li><a href="">Home</a></li>
-				<li><a href="">About</a></li>
+				<li><a href="./../index.html">Home</a></li>
+				<li><a href="./about.html">About</a></li>
 				<li>
-					<span class="">media</span>
-					<!-- <ul>
+					<a href="./pages/audio.html"><span class="">media</span></a>
+					<ul>
 						<li><a href="">Audio</a></li>
 						<li><a href="">video</a></li>
 						<li><a href="">Images</a></li>
-					</ul> -->
+					</ul>
 				</li>
-				<li><a href="">Artists</a></li>
-				<li><a href="">Contact</a></li>
+				<li><a href="./artists.html">Artists</a></li>
+				<li><a href="./contact.html">Contact</a></li>
 			</ul> 
 		</nav>
 	</header>
@@ -49,177 +51,10 @@
 			<p>Music, Video, Creative Images, Entertainment news and articles, and More to be added. We specialize in the things that are to put a smile on your face</p>
 
 			<button class="btn2">Upload Music</button><button class="btn2">Join US</button>
-
-			<div>
-				<div><img src="" alt="call us icon"><span></span></div>
-				<div><img src="" alt="whatsapp icon"><span></span></div>
-			</div>
+			<button class="btn2">About</button><button class="btn2">Donate for Project</button>
 		</section>
 
-		<section >
-			<h2>Latest audio</h2>
-			<small>These are a week or less here on the website</small>
-
-			<div class="files">
-
-
-				<div class="file audio">
-					<p><span>Baby wange</span> - <span>Mike reins</span></p>
-					<div>
-						<small>3:23</small>
-						<span>23 downloads</span>
-						<span>23 plays</span>
-					</div>
-					<audio src="./media/audio/baby wange - mike reins.mp3" controls></audio>
-					<div>
-						<button>
-							<span><!--img--></span><a href="./media/audio/baby wange - mike reins.mp3" download>Download</a>
-						</button>
-						<button>
-							<span><!--img--></span><span>Share</span>
-						</button>
-					</div>
-
-				</div>
-
-				<div class="file audio">
-					<p><span>Chiki dance</span> - <span>Legit media all stars</span></p>
-					<div>
-						<small>3:19</small>
-						<span>23 downloads</span>
-						<span>23 plays</span>
-					</div>
-					<audio src="./media/audio/Chiki dance - Legit media all stars.mp3" controls></audio>
-					<div>
-						<button>
-							<span><!--img--></span><a href="./media/audio/Chiki dance - Legit media all stars.mp3" download>Download</a>
-						</button>
-						<button>
-							<span><!--img--></span><span>Share</span>
-						</button>
-					</div>
-
-				</div>
-
-				<div class="file audio">
-					<p><span>Fafagula</span> - <span>O2 feat Royal Ivan</span></p>
-					<div>
-						<small>3:34</small>
-						<span>23 downloads</span>
-						<span>23 plays</span>
-					</div>
-					<audio src="./media/audio/Fafagula - O2 feat Royal Ivan.mp3" controls></audio>
-					<div>
-						<button>
-							<span><!--img--></span><a href="./media/audio/Fafagula - O2 feat Royal Ivan.mp3" download>Download</a>
-						</button>
-						<button>
-							<span><!--img--></span><span>Share</span>
-						</button>
-					</div>
-
-				</div>
-
-				<div class="file audio">
-					<p><span>Lord i know</span> - <span>oxy gen feat delta fika</span></p>
-					<div>
-						<small>3:41</small>
-						<span>23 downloads</span>
-						<span>23 plays</span>
-					</div>
-					<audio src="./media/audio/Lord i know - oxy gen feat delta fika.mp3" controls></audio>
-					<div>
-						<button>
-							<span><!--img--></span><a href="./media/audio/Lord i know - oxy gen feat delta fika.mp3" download>Download</a>
-						</button>
-						<button>
-							<span><!--img--></span><span>Share</span>
-						</button>
-					</div>
-
-				</div>
-
-				<div class="file audio">
-					<p><span>zig zag</span> - <span>oxy gen feat delta fika</span></p>
-					<div>
-						<small>3:28</small>
-						<span>23 downloads</span>
-						<span>23 plays</span>
-					</div>
-					<audio src="./media/audio/zig zag - oxy gen feat delta fika.mp3" controls></audio>
-					<div>
-						<button>
-							<span><!--img--></span><a href="./media/audio/zig zag - oxy gen feat delta fika.mp3" download>Download</a>
-						</button>
-						<button>
-							<span><!--img--></span><span>Share</span>
-						</button>
-					</div>
-
-				</div>
-
-				<div class="file audio">
-					<p><span>Nze kabaka</span> - <span>sweet nyc</span></p>
-					<div>
-						<small>3:09</small>
-						<span>23 downloads</span>
-						<span>23 plays</span>
-					</div>
-					<audio src="./media/audio/Nze kabaka - sweet nyc.mp3" controls></audio>
-					<div>
-						<button>
-							<span><!--img--></span><a href="./media/audio/Nze kabaka - sweet nyc.mp3" download>Download</a>
-						</button>
-						<button>
-							<span><!--img--></span><span>Share</span>
-						</button>
-					</div>
-
-				</div>
-
-
-			</div>
-		</section>
-
-		<section>
-			<hr>
-			<p>
-				To be a little different from the other websites, Affiliated artists to LEGIT media are free to create or Update their profiles, Upload music and files, advertise themselve (small fee), share event, their pricing, the list keeps going. <br>
-				<button class="btn2">Know More</button>
-			</p>
-
-			<h2>Artists</h2>
-			<div class="artist">
-				<div class="file">
-					<figure><img src="./media/images/" alt=""></figure>
-					<p>Oxy Gen</p>
-					<span>genre</span> Ragga Music
-					<span>Audios</span> 24 mp3, 3 ogg
-					<button><a href="tel:+256777586094">Contact Me</a></button><button class="btn2"><a href="./pages/artist/template.html">About Me</a></button>
-				</div>
-				<div class="file">
-					<figure><img src="./media/images/" alt=""></figure>
-					<p>Oxy Gen</p>
-					<span>genre</span> Ragga Music
-					<span>Audios</span> 24 mp3, 3 ogg
-					<button><a href="tel:+256777586094">Contact Me</a></button><button class="btn2"><a href="./pages/artist/template.html">About Me</a></button>
-				</div>
-				<div class="file">
-					<figure><img src="./media/images/" alt=""></figure>
-					<p>Oxy Gen</p>
-					<span>genre</span> Ragga Music
-					<span>Audios</span> 24 mp3, 3 ogg
-					<button><a href="tel:+256777586094">Contact Me</a></button><button class="btn2"><a href="./pages/artist/template.html">About Me</a></button>
-				</div>
-				<div class="file">
-					<figure><img src="./media/images/" alt=""></figure>
-					<p>Oxy Gen</p>
-					<span>genre</span> Ragga Music
-					<span>Audios</span> 24 mp3, 3 ogg
-					<button><a href="tel:+256777586094">Contact Me</a></button><button class="btn2"><a href="./pages/artist/template.html">About Me</a></button>
-				</div>
-			</div>
-		</section>
+		
 
 
 	</main>
